welcome.lessons.welcome.loopfor.LoopStairs.scala.code
droite
for ( i<-1 to 4){
	baisseBrosse();
	setCouleurBrosse(c:red);
}
